syntax = "proto3";

package mcas;


option go_package = "mcas/proto";


message Metric {
  string name = 1;
  string type = 2;
  int64 delta = 3;
  double value = 4;
  string hash = 5;
}

message GetMetricRequest{
  string name = 1;
  string type = 2;
}

message GetMetricResponse{
  Metric metric = 1;
  string error = 2;
}

message GetMetricsRequest{

}

message GetMetricsResponse{
  repeated Metric metrics = 1;
  string error = 2;
}

message UpdateMetricRequest{
  Metric metric = 1;
}

message UpdateMetricResponse{
  Metric metric = 1;
  string error = 2;
}

message UpdateMetricsRequest{
  repeated Metric metrics = 1;
}

message UpdateMetricsResponse{
  repeated Metric metrics = 1;
  string error = 2;
}

message PingRequest{

}

message PingResponse{
  string error = 1;
}

service MetricsCollector{
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
  rpc GetMetrics(GetMetricsRequest) returns (GetMetricsResponse);
  rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}